2001-06-03  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/EventuallyFreed.java (dispose): Make
	the dispose() method public, it was incorrectly changed
	from public when the EventuallyFreed class was created.

2001-05-12  Christian Krone  <christian.krone@softwareag.com>

	* src/jacl/tcl/lang/Util.java (findElement): Fix parsing of
	nested quoted braces in lists.
	* tests/tcl/lindex.test: Add test for parsing of nested
	quoted braces in list.

2001-05-12  Christian Krone  <christian.krone@softwareag.com>

	* tests/jacl/Interp.test: Add braces around the result
	for the Interp-5.1 test.

2001-05-12  Christian Krone  <christian.krone@softwareag.com>

	* src/jacl/tcl/lang/Interp.java (removeInterpResolver):
	Use Vector.removeElement()instead of Vector.remove()
	which is not supported by JDK 1.1.

2001-05-05  Mo DeJong  <mdejong@redhat.com>

	* tests/tcljava/JavaImportCmd.test: Fix incorrectly
	spelled error message that was causing test failures.

2001-05-05  Christian Krone  <christian.krone@softwareag.com>

	* src/jacl/tcl/lang/Interp.java (resolvers,
	Interp, eventuallyDispose, ResolverScheme,
	addInterpResolver, getInterpResolver,
	removeInterpResolver):
	* src/jacl/tcl/lang/NamespaceCmd.java (createNamespace,
	findCommand, findNamespaceVar, setNamespaceResolver,
	getNamespaceResolver, Namespace):
	* src/jacl/tcl/lang/Resolver.java: New file.
	* src/jacl/tcl/lang/Var.java (lookupVar):
	* src/jacl/tcl/lang/library/init.tcl (unknown):
	Add interp and namespace variable and command
	resolver implementation.

2001-02-07  Christian Sorensen  <cs@maerskdata.dk>

	* src/jacl/tcl/lang/FileCmd.java (getMtime):
	Divide the File.lastModified() result by
	1000 so that the returned result will
	be in seconds instead of milliseconds.

2001-01-28  Mo DeJong  <mdejong@redhat.com>

	* src/tcljava/tcl/lang/JavaImportCmd.java:
	Fix up diction of error messages.

2001-01-28  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/SubstCmd.java: