@@ -1,5 +1,10 @@
 2001-06-03  Mo DeJong  <mdejong@redhat.com>
 
+	* tests/tcl/interp.test: Add interp-32.1, it checks
+	that the child's CWD is inherited from a parent's interp.
+
+2001-06-03  Mo DeJong  <mdejong@redhat.com>
+
 	* src/jacl/tcl/lang/EventuallyFreed.java (dispose): Make
 	the dispose() method public, it was incorrectly changed
 	from public when the EventuallyFreed class was created.
